<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/Nome"
        android:inputType="textPersonName"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="221dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/Senha2"
        android:inputType="textPassword"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword"
        app:layout_constraintVertical_bias="0.629" />


</androidx.constraintlayout.widget.ConstraintLayout>