<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CConvertActivity">


    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextValueReal"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:autofillHints=""
        android:hint="@string/ValorReais"
        android:inputType="numberDecimal"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextValueDolar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/Cotacao"
        android:inputType="numberDecimal"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValueReal"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginBottom="28dp"
        android:padding="15dp"
        android:text="@string/btn_convert"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="28dp"
        android:padding="15dp"
        android:text="@string/btn_clean"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextResult"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/Resultado"
        android:inputType="none"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValueDolar"
        app:layout_constraintVertical_bias="0.19" />


</androidx.constraintlayout.widget.ConstraintLayout>